# Navigation

./: partitions.csv  platformio.ini
lib/: lv_conf.h
lib/TFT_eSPI/: User_Setup.h  User_Setup_Select.h
lib/lvgl/src/core/: lv_group.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ScreenScreen1.c  ui_ScreenScreen2.c  ui_comp_hook.c  ui_events.c  ui_events.h  ui_font_Arial12.c  ui_font_Arial14.c  ui_helpers.c  ui_helpers.h  ui_img_20241025_110411_0000_png.c  ui_img_20241025_110411_0001_png.c  ui_img_dog_0_png.c  ui_img_dog_1_png.c  ui_img_dog_2_png.c  ui_img_h_20250228_131139_0000_png.c  ui_img_rightturn_png.c
lib/ui/src/lv_i18n/: lv_i18n.c
lib/ui/translate/: en-EN.yml
src/: main.cpp
